--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(micro_utils)
 
-add_subdirectory(gtest)
-
 include_directories(
     "src"
     "../include"
@@ -14,8 +12,8 @@ file(GLOB SOURCES
     "src/*.cpp"
 )
 
-add_executable(${CMAKE_PROJECT_NAME}_test ${SOURCES})
+add_executable(${PROJECT_NAME}_test ${SOURCES})
 
-add_test(NAME ${CMAKE_PROJECT_NAME}_test COMMAND ${CMAKE_PROJECT_NAME}_test)
+add_test(NAME ${PROJECT_NAME}_test COMMAND ${PROJECT_NAME}_test)
 
-target_link_libraries(${CMAKE_PROJECT_NAME}_test PUBLIC gtest)
+target_link_libraries(${PROJECT_NAME}_test PUBLIC gtest)
