--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,9 @@ if (BUILD_TESTS)
     add_subdirectory(thirdparty/googletest)
     add_subdirectory(test)
 endif()
+
+if (BUILD_BENCHMARKS)
+    message("Benchmarks are enabled")
+    add_subdirectory(thirdparty/benchmark)
+    add_subdirectory(benchmark)
+endif()
